syntax = "proto3";

package vectorstore;

service VectorStoreService {
  rpc CreateVectorStore (CreateVectorStoreRequest) returns (CreateVectorStoreResponse);
  rpc AddDocuments (AddDocumentsRequest) returns (AddDocumentsResponse);
  rpc SearchDocumentsWithFilter (SearchDocumentsWithFilterRequest) returns (SearchDocumentsWithFilterResponse);
  rpc SearchDocuments (SearchDocumentsRequest) returns (SearchDocumentsResponse);
  rpc DeleteDocument (DeleteDocumentsRequest) returns (DeleteDocumentsResponse);

}

message CreateVectorStoreRequest {
  string index_name = 1;
  string text_key = 2;
  repeated string metadata_keys = 3;
}

message CreateVectorStoreResponse {
  string message = 1;
}

message Document {
    string page_content = 1;
    map<string, string> metadata = 2;
}

message AddDocumentsRequest {
    string index_name = 1;
    string text_key = 2;
    repeated string metadata_keys = 3;
    repeated Document documents = 4;
}

message AddDocumentsResponse {
    string message = 1;
}

message SearchDocumentsRequest {
  string query = 1;
  int32 k = 2;
  string index_name = 5;
  string text_key = 6;
  repeated string metadata_keys = 7;
}

message SearchDocumentsResponse {
  repeated Document documents = 1;
}

message SearchDocumentsWithFilterRequest {
  string query = 1;
  int32 k = 2;
  string filter_key = 3;
  string filter_value = 4;
  string index_name = 5;
  string text_key = 6;
  repeated string metadata_keys = 7;
}
message SearchDocumentsWithFilterResponse {
  repeated Document documents = 1;
}

message DeleteDocumentsRequest {
  string index_name = 1 ;
  string text_key = 2;
  repeated string metadata_keys = 3;
  string  id= 4;
}

message DeleteDocumentsResponse {
  string message = 1 ;
}

